c2py/src/qsortParser.java
// $ANTLR 3.4 src\\qsort.g 2014-06-09 18:34:17

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class qsortParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ID", "INT", "LINE_COMMENT", "WS", "'!'", "'!='", "'&&'", "'&'", "'&='", "'('", "')'", "'*'", "'*='", "'+'", "'++'", "'+='", "','", "'-'", "'--'", "'-='", "'.'", "'/'", "'/='", "';'", "'<'", "'<='", "'='", "'>'", "'>='", "'['", "']'", "'^'", "'^='", "'char'", "'else'", "'if'", "'int&'", "'int'", "'int*'", "'return'", "'void'", "'while'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int COMMENT=4;
    public static final int ID=5;
    public static final int INT=6;
    public static final int LINE_COMMENT=7;
    public static final int WS=8;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public qsortParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public qsortParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return qsortParser.tokenNames; }
    public String getGrammarFileName() { return "src\\qsort.g"; }


    	ArrayList<String> FunctionName = new ArrayList();
    	ArrayList<String> FunctionType = new ArrayList();
    	ArrayList<String> VariableError = new ArrayList();
    	ArrayList<String> ClassError = new ArrayList();
    	Variable CurVariable = new Variable();

    	class TabController {
    		ArrayList<String> tabList = new ArrayList();
    		public void addTab() {
    			tabList.add("\t");
    		}
    		public void removeTab() {
    			if (tabList.size() == 0) {
    				return;
    			}
    			tabList.remove(tabList.size() - 1);
    		}
    		public String tab() {
    			String temp = "";
    			for (int i = 0; i < tabList.size(); i++) {
    				temp += tabList.get(i);
    			}
    			return temp;
    		}
    	};
    	TabController tabs = new TabController();
    	class Variable
    	{
    		String name;
    		String type;
    		String classStr;
    		boolean flag;
    	};
    	ArrayList<Variable> VariableList = new ArrayList();
    	
    	class Function
    	{
    		String name;
    		ArrayList<String> paras = new ArrayList();
    		String paraString;
    		String classStr;
    		boolean flag;
    		String returnString;
    	};
    	ArrayList<Function> FunctionList = new ArrayList();
    	
    	class ClassStruct
    	{
    		String ClassName;
    		String ConstructFunctionPara;
    		String initial;
    	};
    	ArrayList<ClassStruct> ClassList = new ArrayList();



    // $ANTLR start "program"
    // src\\qsort.g:59:1: program : declaration declarations ;
    public final void program() throws RecognitionException {
        String declaration1 =null;

        String declarations2 =null;


        try {
            // src\\qsort.g:60:2: ( declaration declarations )
            // src\\qsort.g:60:4: declaration declarations
            {
            pushFollow(FOLLOW_declaration_in_program16);
            declaration1=declaration();

            state._fsp--;


            pushFollow(FOLLOW_declarations_in_program18);
            declarations2=declarations();

            state._fsp--;



            			System.out.println(declaration1 + declarations2);
            			if(VariableError.size() != 0)
            			{
            				System.out.println("Cannot find variable:");
            				for(String i : VariableError)
            					System.out.println(i);
            			}
            		

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "program"



    // $ANTLR start "declarations"
    // src\\qsort.g:73:1: declarations returns [String name] : ( declaration a= declarations |);
    public final String declarations() throws RecognitionException {
        String name = null;


        String a =null;

        String declaration3 =null;



        	name = null;

        try {
            // src\\qsort.g:77:2: ( declaration a= declarations |)
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==COMMENT||LA1_0==LINE_COMMENT||LA1_0==38||(LA1_0 >= 41 && LA1_0 <= 43)||LA1_0==45) ) {
                alt1=1;
            }
            else if ( (LA1_0==EOF) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // src\\qsort.g:77:5: declaration a= declarations
                    {
                    pushFollow(FOLLOW_declaration_in_declarations43);
                    declaration3=declaration();

                    state._fsp--;


                    pushFollow(FOLLOW_declarations_in_declarations47);
                    a=declarations();

                    state._fsp--;


                    name = declaration3 + "" + a;

                    }
                    break;
                case 2 :
                    // src\\qsort.g:79:4: 
                    {
                    name = "";

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return name;
    }
    // $ANTLR end "declarations"



    // $ANTLR start "declaration"
    // src\\qsort.g:83:1: declaration returns [String name] : ( type functionVariable | LINE_COMMENT | COMMENT );
    public final String declaration() throws RecognitionException {
        String name = null;


        String functionVariable4 =null;

        String type5 =null;



        	name = null;

        try {
            // src\\qsort.g:87:2: ( type functionVariable | LINE_COMMENT | COMMENT )
            int alt2=3;
            switch ( input.LA(1) ) {
            case 38:
            case 41:
            case 42:
            case 43:
            case 45:
                {
                alt2=1;
                }
                break;
            case LINE_COMMENT:
                {
                alt2=2;
                }
                break;
            case COMMENT:
                {
                alt2=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // src\\qsort.g:89:3: type functionVariable
                    {
                    pushFollow(FOLLOW_type_in_declaration83);
                    type5=type();

                    state._fsp--;


                    pushFollow(FOLLOW_functionVariable_in_declaration85);
                    functionVariable4=functionVariable();

                    state._fsp--;



                    			name = functionVariable4 + "\n";
                    			CurVariable.type = type5;
                    			VariableList.add(CurVariable);
                    		

                    }
                    break;
                case 2 :
                    // src\\qsort.g:95:4: LINE_COMMENT
                    {
                    match(input,LINE_COMMENT,FOLLOW_LINE_COMMENT_in_declaration94); 

                    name = "";

                    }
                    break;
                case 3 :
                    // src\\qsort.g:97:4: COMMENT
                    {
                    match(input,COMMENT,FOLLOW_COMMENT_in_declaration104); 

                    name = "";

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return name;
    }
    // $ANTLR end "declaration"



    // $ANTLR start "ieStat"
    // src\\qsort.g:102:1: ieStat returns [String name] : ifPart elsePart ;
    public final String ieStat() throws RecognitionException {
        String name = null;


        String ifPart6 =null;

        String elsePart7 =null;



        	name = null;

        try {
            // src\\qsort.g:106:2: ( ifPart elsePart )
            // src\\qsort.g:106:4: ifPart elsePart
            {
            pushFollow(FOLLOW_ifPart_in_ieStat129);
            ifPart6=ifPart();

            state._fsp--;


            pushFollow(FOLLOW_elsePart_in_ieStat131);
            elsePart7=elsePart();

            state._fsp--;


            name = ifPart6 + elsePart7;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return name;
    }
    // $ANTLR end "ieStat"



    // $ANTLR start "ifPart"
    // src\\qsort.g:110:1: ifPart returns [String name] : 'if' '(' exprvalue ')' '{' block '}' ;
    public final String ifPart() throws RecognitionException {
        String name = null;


        String exprvalue8 =null;

        String block9 =null;



        	name = null;

        try {
            // src\\qsort.g:114:2: ( 'if' '(' exprvalue ')' '{' block '}' )
            // src\\qsort.g:114:4: 'if' '(' exprvalue ')' '{' block '}'
            {
            match(input,40,FOLLOW_40_in_ifPart154); 

            match(input,14,FOLLOW_14_in_ifPart156); 

            pushFollow(FOLLOW_exprvalue_in_ifPart158);
            exprvalue8=exprvalue();

            state._fsp--;


            match(input,15,FOLLOW_15_in_ifPart160); 

            match(input,47,FOLLOW_47_in_ifPart162); 

            pushFollow(FOLLOW_block_in_ifPart164);
            block9=block();

            state._fsp--;


            match(input,49,FOLLOW_49_in_ifPart166); 

            name = "if " + exprvalue8 + ":" + "\n" + "\t" +  block9 + "" + ";";

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return name;
    }
    // $ANTLR end "ifPart"



    // $ANTLR start "elsePart"
    // src\\qsort.g:118:1: elsePart returns [String name] : ( 'else' '{' block '}' |);
    public final String elsePart() throws RecognitionException {
        String name = null;


        String block10 =null;



        	name = null;

        try {
            // src\\qsort.g:122:2: ( 'else' '{' block '}' |)
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==39) ) {
                alt3=1;
            }
            else if ( ((LA3_0 >= COMMENT && LA3_0 <= ID)||LA3_0==LINE_COMMENT||LA3_0==38||(LA3_0 >= 40 && LA3_0 <= 46)||LA3_0==49) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // src\\qsort.g:122:4: 'else' '{' block '}'
                    {
                    match(input,39,FOLLOW_39_in_elsePart190); 

                    match(input,47,FOLLOW_47_in_elsePart192); 

                    pushFollow(FOLLOW_block_in_elsePart194);
                    block10=block();

                    state._fsp--;


                    match(input,49,FOLLOW_49_in_elsePart196); 

                    name = "else:\n" + block10 + ";";

                    }
                    break;
                case 2 :
                    // src\\qsort.g:124:4: 
                    {
                    name = "";

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return name;
    }
    // $ANTLR end "elsePart"



    // $ANTLR start "whileStat"
    // src\\qsort.g:128:1: whileStat returns [String name] : 'while' '(' expr ')' '{' block '}' ;
    public final String whileStat() throws RecognitionException {
        String name = null;


        String expr11 =null;

        String block12 =null;



        	name = null;

        try {
            // src\\qsort.g:132:2: ( 'while' '(' expr ')' '{' block '}' )
            // src\\qsort.g:132:4: 'while' '(' expr ')' '{' block '}'
            {
            match(input,46,FOLLOW_46_in_whileStat225); 

            match(input,14,FOLLOW_14_in_whileStat227); 

            pushFollow(FOLLOW_expr_in_whileStat229);
            expr11=expr();

            state._fsp--;


            match(input,15,FOLLOW_15_in_whileStat231); 

            match(input,47,FOLLOW_47_in_whileStat233); 

            pushFollow(FOLLOW_block_in_whileStat235);
            block12=block();

            state._fsp--;


            match(input,49,FOLLOW_49_in_whileStat237); 


            			
            			name = "while " + expr11 + ":\n" + "\t"  + block12 + "" + ";";
            			
            		

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return name;
    }
    // $ANTLR end "whileStat"



    // $ANTLR start "block"
    // src\\qsort.g:140:1: block returns [String name] : ( stat a= block |);
    public final String block() throws RecognitionException {
        String name = null;


        String a =null;

        String stat13 =null;



        	name = null;

        try {
            // src\\qsort.g:144:2: ( stat a= block |)
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0 >= COMMENT && LA4_0 <= ID)||LA4_0==LINE_COMMENT||LA4_0==38||(LA4_0 >= 40 && LA4_0 <= 46)) ) {
                alt4=1;
            }
            else if ( (LA4_0==49) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // src\\qsort.g:144:4: stat a= block
                    {
                    pushFollow(FOLLOW_stat_in_block260);
                    stat13=stat();

                    state._fsp--;


                    pushFollow(FOLLOW_block_in_block264);
                    a=block();

                    state._fsp--;


                    name = stat13 + a;

                    }
                    break;
                case 2 :
                    // src\\qsort.g:146:4: 
                    {

                    			name = "";
                    		

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return name;
    }
    // $ANTLR end "block"



    // $ANTLR start "stat"
    // src\\qsort.g:151:1: stat returns [String name] : ( type decVariable | ieStat | whileStat | callFunction ';' | 'return' returnSentence ';' | normalExp ';' | LINE_COMMENT | COMMENT );
    public final String stat() throws RecognitionException {
        String name = null;


        String type14 =null;

        qsortParser.decVariable_return decVariable15 =null;

        String ieStat16 =null;

        String whileStat17 =null;

        String callFunction18 =null;

        String returnSentence19 =null;

        String normalExp20 =null;



        	name = null;

        try {
            // src\\qsort.g:155:2: ( type decVariable | ieStat | whileStat | callFunction ';' | 'return' returnSentence ';' | normalExp ';' | LINE_COMMENT | COMMENT )
            int alt5=8;
            switch ( input.LA(1) ) {
            case 38:
            case 41:
            case 42:
            case 43:
            case 45:
                {
                alt5=1;
                }
                break;
            case 40:
                {
                alt5=2;
                }
                break;
            case 46:
                {
                alt5=3;
                }
                break;
            case ID:
                {
                switch ( input.LA(2) ) {
                case 14:
                    {
                    alt5=4;
                    }
                    break;
                case 25:
                    {
                    int LA5_9 = input.LA(3);

                    if ( (LA5_9==ID) ) {
                        int LA5_11 = input.LA(4);

                        if ( (LA5_11==14) ) {
                            alt5=4;
                        }
                        else if ( ((LA5_11 >= 10 && LA5_11 <= 13)||(LA5_11 >= 16 && LA5_11 <= 20)||(LA5_11 >= 22 && LA5_11 <= 24)||(LA5_11 >= 26 && LA5_11 <= 33)||(LA5_11 >= 36 && LA5_11 <= 37)||LA5_11==48) ) {
                            alt5=6;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 5, 11, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 9, input);

                        throw nvae;

                    }
                    }
                    break;
                case 10:
                case 11:
                case 12:
                case 13:
                case 16:
                case 17:
                case 18:
                case 19:
                case 20:
                case 22:
                case 23:
                case 24:
                case 26:
                case 27:
                case 28:
                case 29:
                case 30:
                case 31:
                case 32:
                case 33:
                case 34:
                case 36:
                case 37:
                case 48:
                    {
                    alt5=6;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 4, input);

                    throw nvae;

                }

                }
                break;
            case 44:
                {
                alt5=5;
                }
                break;
            case LINE_COMMENT:
                {
                alt5=7;
                }
                break;
            case COMMENT:
                {
                alt5=8;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // src\\qsort.g:155:4: type decVariable
                    {
                    pushFollow(FOLLOW_type_in_stat292);
                    type14=type();

                    state._fsp--;


                    pushFollow(FOLLOW_decVariable_in_stat294);
                    decVariable15=decVariable();

                    state._fsp--;



                    			name = "\t" + type14 + "" + (decVariable15!=null?decVariable15.name:null) + "\n";
                    			CurVariable.type = type14;
                    			VariableList.add(CurVariable);

                    		

                    }
                    break;
                case 2 :
                    // src\\qsort.g:162:4: ieStat
                    {
                    pushFollow(FOLLOW_ieStat_in_stat303);
                    ieStat16=ieStat();

                    state._fsp--;



                    			
                    			name = "\t"  + ieStat16 + "\n";
                    			
                    		

                    }
                    break;
                case 3 :
                    // src\\qsort.g:168:4: whileStat
                    {
                    pushFollow(FOLLOW_whileStat_in_stat312);
                    whileStat17=whileStat();

                    state._fsp--;



                    			
                    			name = "\t"  + whileStat17 + "\n";
                    			
                    		

                    }
                    break;
                case 4 :
                    // src\\qsort.g:174:4: callFunction ';'
                    {
                    pushFollow(FOLLOW_callFunction_in_stat321);
                    callFunction18=callFunction();

                    state._fsp--;


                    match(input,28,FOLLOW_28_in_stat323); 


                    			
                    			name = "\t"  + callFunction18 + "\n";
                    		

                    }
                    break;
                case 5 :
                    // src\\qsort.g:179:4: 'return' returnSentence ';'
                    {
                    match(input,44,FOLLOW_44_in_stat332); 
